public/css/infinity-box.css
html,
body {
  background-color: rgb(58,59,62);
  padding: 0;
  margin: 0;
  /* overflow-x: hidden; */
  background-image: url('../img/classroom.jpg');
  background-repeat: no-repeat;
  background-size: contain;
  font-family: 'Muli', 'Helvetica', 'Arial', 'sans-serif';
}

a {
  color: #00FA9A;
  -webkit-transition: all .35s;
  transition: all .35s;
  display: inline-block;
  padding: 2px;
  margin: 2px;
}

a:hover, a:focus {
  color: #00FA9A;
}

h1,
h2,
h3 {
  font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
  font-weight: 600;
  letter-spacing: 1px;
}

h3 {
  text-shadow: 1px 1px darkgray;
  font-size: 50px;
  font-weight: 600;
}

.tagline {
  color: rgb(130, 204, 87);
  font-size: 30px;
  text-shadow: 2px 2px black;
}

p {
  font-size: 18px;
  line-height: 1.5;
  margin-bottom: 20px;
}

section {
  padding: 100px 0;
}

section h2 {
  font-size: 50px;
}

#mainNav {
  border-color: rgba(34, 34, 34, 0.05);
  background-color: rgb(58,59,62);
  -webkit-transition: all .35s;
  transition: all .35s;
  font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
  font-weight: 200;
  letter-spacing: 1px;
  padding: 10px;
}

#mainNav .navbar-brand {
  color: #00FA9A;
  font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
  font-weight: 200;
  letter-spacing: 1px;
}

#mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
  color: #00FA9A;
}

#mainNav .navbar-toggler {
  font-size: 12px;
  padding: 8px 8px;
  color: white;
  border: 1px solid white;
}

#mainNav .navbar-nav > li > a {
  font-size: 11px;
  font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
  letter-spacing: 2px;
  text-transform: uppercase;
}

#mainNav .navbar-nav > li > a.active {
  color: rgb(255,156,1) !important;
}

#mainNav .navbar-nav > li > a.active:hover {
  color: white !important;
}

#mainNav .navbar-nav > li > a,
#mainNav .navbar-nav > li > a:focus {
  color: #222222;
}

#mainNav .navbar-nav > li > a:hover,
#mainNav .navbar-nav > li > a:focus:hover {
  color: #00FA9A;
}

@media (min-width: 992px) {
  #mainNav {
    border-color: transparent;
    background-color: rgb(58,59,62);
  }
  #mainNav .navbar-brand {
    color: fade(white, 70%);
  }
  #mainNav .navbar-brand:hover, #mainNav .navbar-brand:focus {
    color: rgb(58,59,62);
  }
  #mainNav .navbar-nav > li > a,
  #mainNav .navbar-nav > li > a:focus {
    color: white;
  }
  #mainNav .navbar-nav > li > a:hover,
  #mainNav .navbar-nav > li > a:focus:hover {
    color: #00FA9A;
  }
  #mainNav.navbar-shrink {
    border-color: rgba(34, 34, 34, 0.1);
    background-color: white;
  }
  #mainNav.navbar-shrink .navbar-brand {
    color: #222222;
  }
  #mainNav.navbar-shrink .navbar-brand:hover, #mainNav.navbar-shrink .navbar-brand:focus {
    color: #00FA9A;
  }
  #mainNav.navbar-shrink .navbar-nav > li > a,
  #mainNav.navbar-shrink .navbar-nav > li > a:focus {
    color: #00FA9A;
  }
  #mainNav.navbar-shrink .navbar-nav > li > a:hover,
  #mainNav.navbar-shrink .navbar-nav > li > a:focus:hover {
    color: #00FA9A;
  }
}
header {
  padding-top: 9%;
  padding-bottom: 4%;
  padding-right: 0;
  padding-left: 0;
  margin: 0;
}

header.device-container {
  min-width: 150px;
  margin-right: 0;
  margin-left: auto;
  margin-top: 100px;
}

header.device-container .screen img {
  border-radius: 3px;
}

@media {
  header.masthead .header-content {
    margin-bottom: 0;
    text-align: left;
  }
  header .header-content h1 {
    font-size: 90px;
    color: rgb(0, 186, 202);
    text-shadow: 2px 2px black;
  }
  header.device-container {
    max-width: 200px;
  }
}
.download {
  width: 100%;
}
section.download {
  position: relative;
  padding: 150px 0;
}

section.download h2 {
  font-size: 50px;
  margin-top: 0;
}

section.download .badges .badge-link {
  display: block;
  margin-bottom: 25px;
}

section.download .badges .badge-link:last-child {
  margin-bottom: 0;
}

section.download .badges .badge-link img {
  height: 60px;
}

@media (min-width: 768px) {
  section.download .badges .badge-link {
    display: inline-block;
    margin-bottom: 0;
  }
}

@media (min-width: 768px) {
  section.download h2 {
    font-size: 70px;
  }
}

section.features .section-heading {
  margin-bottom: 100px;
}

section.features .section-heading h2 {
  margin-top: 0;
}

section.features .section-heading p {
  margin-bottom: 0;
}

section.features .device-container,
section.features .feature-item {
  max-width: 325px;
  margin: 0 auto;
}

section.features .device-container {
  margin-bottom: 100px;
}

@media (min-width: 992px) {
  section.features .device-container {
    margin-bottom: 0;
  }
}

section.features .feature-item {
  padding-top: 50px;
  padding-bottom: 50px;
  text-align: center;
}

section.features .feature-item h3 {
  font-size: 30px;
}

section.features .feature-item i {
  font-size: 80px;
  display: block;
  margin-bottom: 15px;
  background: -webkit-gradient(linear, right top, left top, from(#7b4397), to(#dc2430));
  background: linear-gradient(to left, #7b4397, #dc2430);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

footer {
  padding: 25px 0;
  color: white;
  background-color: rgb(58, 59, 62);
}

.bg-primary {
  background: #3CB371;
}

.no-gutter > [class*='col-'] {
  padding-right: 0;
  padding-left: 0;
}

.btn-outline {
  color: black;
  border: 1px solid;
  border-color: black;
}

.btn-outline:hover, .btn-outline:focus, .btn-outline:active, .btn-outline.active {
  color: white;
  border-color: black;
  background-color: #3CB371;
}

.btn {
  border-radius: 300px;
  font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
  letter-spacing: 2px;
  text-transform: uppercase;
  background-color: rgb(226, 226, 226);
}

.btn-xl {
  font-size: 11px;
  padding: 15px 45px;
}

